--- a/css/project-detail.css
+++ b/css/project-detail.css
@@ -113,7 +113,7 @@
     flex: 1;
     min-height: 100vh;
     background: transparent;
-    margin-top: 80px;
+    margin-top: 95px;
 }
 
 .project-gallery-grid {
